@@ -9,6 +9,8 @@
 - Write pid file if filename is set
 - Add startup script and monitor script from Yuri
 - Some logging correctness fixes from Iain Wade
+- Add support for LCP Ident and CallBack (rejection only) from Yuri
+- Initiate LCP if not attempted by the client
 
 * Tue Jul 13 2004 Brendan O'Dea <bod@optusnet.com.au> 2.0.1
 - Update INSTALL, Docs/manual.html documentation.
